--- a/Neural_Networks_using_KERAS.ipynb
+++ b/Neural_Networks_using_KERAS.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "siKTbERtD5g8"
       },
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "Ni948WEaFdaQ"
       },
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "t-8OEZlGHGiO",
         "colab": {
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -119,7 +119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -145,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -364,7 +364,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -390,7 +390,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "sgf2za7WIbx5"
       },
@@ -401,7 +401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -431,7 +431,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "2QJenClq4oiZ"
       },
@@ -443,7 +443,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -645,7 +645,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "HWi23Lmv6HRu",
         "colab": {
@@ -666,8 +666,15 @@
       "source": [
         "model= keras.Sequential([\n",
         "    keras.layers.Flatten(input_shape=(28,28)),\n",
-        "    keras.layers.Dense(1000, activation=\"relu\"),\n",
-        "    keras.layers.Dense(300, activation=\"relu\"),\n",
+        "    keras.layers.Dense(512, activation=\"relu\"),\n",
+        "    keras.layers.BatchNormalization(),\n",
+        "    keras.layers.Dropout(0.25),\n",
+        "    keras.layers.Dense(256, activation=\"relu\"),\n",
+        "    keras.layers.BatchNormalization(),\n",
+        "    keras.layers.Dropout(0.25),\n",
+        "    keras.layers.Dense(128, activation=\"relu\"),\n",
+        "    keras.layers.BatchNormalization(),\n",
+        "    keras.layers.Dropout(0.25),\n",
         "    keras.layers.Dense(10, activation=\"softmax\")\n",
         "\n",
         "    # 10 classes so 10 output\n",
@@ -686,7 +693,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "3d36voGB83wz"
       },
@@ -697,7 +704,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "8seQCYNr7pFD"
       },
@@ -720,7 +727,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -772,7 +779,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -797,7 +804,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "cVvuG2-tCaNG",
         "colab": {
@@ -823,7 +830,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "UALPbSsRgev0",
         "colab": {
@@ -864,7 +871,7 @@
         "id": "EgDCnraixYLJ",
         "outputId": "7b657036-6bc6-4375-fcd1-e246a0a981b9"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -882,7 +889,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMfGHqL4AOpUIRVEdZYiGX6",
       "include_colab_link": true
     },
     "kernelspec": {
